# Tarefa18Ebac

./: main.py  pyproject.toml
.github/workflows/: python-app.yml
test/: test_rota.py
