[project]
name = "tarefa18ebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Zampar",email = "guilhermezampar90@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
